metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/LiveText__ITR_Message__c.object-meta.xml
<CustomObject>
    <description>Inbound Messages for ITR</description>
    <label>ITR Message</label>
    <nameField>
        <label>ITR Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ITR Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>