metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Account__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated with this interaction</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ITR Messages</relationshipLabel>
    <relationshipName>ITR_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>