metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Available_Agents__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Available_Agents__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Available Agents</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>