metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Campaign_Send_Member__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Campaign_Send_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Campaign Send Member.</description>
    <inlineHelpText>Lookup to the Campaign Send Member.</inlineHelpText>
    <label>Campaign Send Member</label>
    <referenceTo>LiveText__Campaign_Send_Member__c</referenceTo>
    <relationshipLabel>ITR Messages</relationshipLabel>
    <relationshipName>ITR_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>