metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Case__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case associated with this interaction</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ITR Messages</relationshipLabel>
    <relationshipName>ITR_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>