metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Contact__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact associated with this interaction</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ITR Messages</relationshipLabel>
    <relationshipName>ITR_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>