metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Formatted_Originating_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Formatted_Originating_Number__c</fullName>
    <formula>LiveText__Originating_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Originating Number</label>
    <type>Text</type>
</CustomField>