metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Group_Id__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Group_Id__c</fullName>
    <description>The group identifier for the chat specified by the business, such as a department name.</description>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>