metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__HTML_Transcript__c.field-meta.xml
<CustomField>
    <fullName>LiveText__HTML_Transcript__c</fullName>
    <description>HTML transcript for this interaction</description>
    <label>HTML Transcript</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>