metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Intent_Id__c</fullName>
    <description>The intent of the chat, specified by the business.</description>
    <label>Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>