metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Is_Form_Response__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Is_Form_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies a message as a form response</description>
    <label>Is Form Response?</label>
    <type>Checkbox</type>
</CustomField>