metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Is_Within_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Is_Within_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the current message was received during business hours</description>
    <label>Is Within Business Hours</label>
    <type>Checkbox</type>
</CustomField>