metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__ITR_Context__c.field-meta.xml
<CustomField>
    <fullName>LiveText__ITR_Context__c</fullName>
    <description>Context for this ITR interaction</description>
    <label>ITR Context</label>
    <length>100</length>
    <type>Text</type>
</CustomField>