metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Last_Modified_Text_Session_Header__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Last_Modified_Text_Session_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified Text Session Header</label>
    <referenceTo>LiveText__Conversation_Header__c</referenceTo>
    <relationshipLabel>ITR Messages</relationshipLabel>
    <relationshipName>ITR_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>