metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Lead__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead associated with this interaction</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>ITR Messages</relationshipLabel>
    <relationshipName>ITR_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>