metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__LiveText_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__LiveText_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LiveMessage Number associated with this interaction</description>
    <label>LiveMessage Number</label>
    <referenceTo>LiveText__LiveText_Number__c</referenceTo>
    <relationshipLabel>ITR Messages</relationshipLabel>
    <relationshipName>ITR_Messages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>