metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Message__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Message__c</fullName>
    <description>Message associated with this interaction</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>