metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Mo_Message_Counter__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Mo_Message_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MO Message Counter is incremented by 1 every time a Mobile Originated message is received by the ITR.</description>
    <inlineHelpText>MO Message Counter is incremented by 1 every time a Mobile Originated message is received by the ITR.</inlineHelpText>
    <label>Mo Message Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>