metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity associated with this interaction</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ITR Messages</relationshipLabel>
    <relationshipName>ITR_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>