metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Opt_In_Status__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Opt_In_Status__c</fullName>
    <description>Opt-in status at time of this interaction</description>
    <label>Opt-In Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>