metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Originating_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Originating_Number__c</fullName>
    <description>Originating phone number for this interaction</description>
    <label>Originating Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>