metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Queue_Name__c</fullName>
    <description>Omni-Channel Queue to route this interaction to</description>
    <label>Queue Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>