metadata-sfdx/force-app/main/default/objects/LiveText__ITR_Message__c/fields/LiveText__Text_Transcript__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Text_Transcript__c</fullName>
    <description>Text transcript for this interaction</description>
    <label>Text Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>